# UI

./: .gitignore  README.md  pyproject.toml
src/UI/: __init__.py  exampleApp.py  graphics.py  main.py  worker.py
src/UI/charting/: __init__.py  charts.py
src/UI/core/: UIElements.py  __init__.py  editor.py  graphics.py  worker.py
