[project]
name = "UI"
version = "0.1.0"
description = "Reusable tools for my projects"
authors = [
    { name="Josh Busst" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4.2",
    "pygame>=2.6.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]